--- a/app/views/layouts/catalog.html.erb
+++ b/app/views/layouts/catalog.html.erb
@@ -2,6 +2,8 @@
 <html lang="en" class="no-js">
   <head>
 		<%= render partial: 'shared/head_includes' %>
+		<%= stylesheet_link_tag subsite_layout, :media => 'all'  %>
+		<%= javascript_include_tag subsite_layout %>
 		<script>
 			window.CULh_feedback_url = 'https://feedback.cul.columbia.edu/feedback_submission/dlc';
 		</script>
