--- a/app/views/layouts/details.html.erb
+++ b/app/views/layouts/details.html.erb
@@ -2,6 +2,8 @@
 <html lang="en" class="no-js">
   <head>
     <%= render partial: 'shared/head_includes' %>
+    <%= stylesheet_link_tag subsite_layout, :media => 'all'  %>
+    <%= javascript_include_tag subsite_layout %>
   </head>
   <body class="<%= render_body_class %> blacklight-dcv %> dcv catalog <%= params[:action] %>" onload="initTiles(<%= params[:initial_page] if params[:initial_page] %>);">
 
