--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -2,10 +2,8 @@
 <html lang="en" class="no-js">
 	<head>
 		<%= render partial: 'shared/head_includes' %>
-		<% # dcv css is always pulled in via head_includes %>
-		<%= stylesheet_link_tag subsite_layout unless subsite_layout == 'dcv' %>
-		<% # dcv js is always pulled in via head_includes %>
-		<%= javascript_include_tag subsite_layout unless subsite_layout == 'dcv' %>
+		<%= stylesheet_link_tag subsite_layout %>
+		<%= javascript_include_tag subsite_layout %>
 		<meta name="robots" content="noindex" />
 	</head>
 	<body class="empty <%= render_subsite_body_classes %> <%= params[:action] %>" style="padding-top: 50px;">
